--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,13 @@
 {
   "name": "es/apiv2-client",
   "license": "MIT",
-  "type": "symfony-bundle",
+  "type": "library",
   "autoload": {
     "psr-4": {
       "ES\\APIv2Client\\": ""
     }
+  },
+  "require": {
+    "symfony/expression-language": "^3.3"
   }
 }
