--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,22 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- http://phpunit.de/manual/4.1/en/appendixes.configuration.html -->
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
-         backupGlobals="false"
-         colors="true"
-         beStrictAboutTestsThatDoNotTestAnything="false"
->
-    <php>
-        <ini name="error_reporting" value="-1" />
-        <server name="KERNEL_DIR" value="app/" />
-        <var name="CACHE_DIR" value="var/cache/test" />
-        <const name="NOUKA_PAS_COMPRENDRE" value="false" />
-    </php>
-
+<phpunit colors="true">
     <testsuites>
-        <testsuite name="app">
-            <directory>Tests/</directory>
+        <testsuite>
+            <directory>tests/</directory>
         </testsuite>
     </testsuites>
 </phpunit>
